FINERACT-1981: Interest Bearing EMI calculation enhancements